.provarCaches/00D5f000005vwGkEAI/objects/rstk__icinvreconb__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icinvreconb</customHelpPage>
    <description>icinvreconb__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icinvreconb_div__r.rstk__sydiv_div__c +&quot;_&quot;+ TEXT(rstk__icinvreconb_batchno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__icinvreconb_batchno__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_abc__c</fullName>
        <inlineHelpText>The ABC classification you wish to generate the Inventory Reconciliation Batch for.</inlineHelpText>
        <label>ABC Class</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_batchno__c</fullName>
        <inlineHelpText>System-generated batch number.</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation Batchs</relationshipLabel>
        <relationshipName>icinvreconbs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_fritem__c</fullName>
        <inlineHelpText>The starting Item Number for which you wish to create the Inventory Reconciliation Batch for.  When entering a From Item Number, you must also enter a Thru Item Number.  Leave both fields blank for all.</inlineHelpText>
        <label>From Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Commodity Code for which you wish to create the Inventory Reconciliation Batch for.  Can be left blank for all.</inlineHelpText>
        <label>Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation Batchs</relationshipLabel>
        <relationshipName>icinvreconbs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_numbera__c</fullName>
        <description>icinvreconb_numbera__c</description>
        <label>Number of A Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_numberb__c</fullName>
        <description>icinvreconb_numberb__c</description>
        <label>Number of B Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_numberc__c</fullName>
        <description>icinvreconb_numberc__c</description>
        <label>Number of C Items</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_resp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Responsible Planner for which you wish to create the Inventory Reconciliation Batch for.  Can be left blank for all.</inlineHelpText>
        <label>Responsible Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation Batchs</relationshipLabel>
        <relationshipName>icinvreconbs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Site for which you wish to create the Inventory Reconciliation Batch for,  Default is the Main Site for the given Division.</inlineHelpText>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation Batchs</relationshipLabel>
        <relationshipName>icinvreconbs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvreconb_toitem__c</fullName>
        <inlineHelpText>The ending Item Number for which you wish to create the Inventory Reconciliation Batch for.  When entering a From Item Number, you must also enter a Thru Item Number.  Leave both fields blank for all.</inlineHelpText>
        <label>To Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Physical Inventory Reconciliation Batch</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__icinvreconb_div__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Reconcile_Batches</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__icinvreconb_div__c</columns>
        <columns>rstk__icinvreconb_site__c</columns>
        <columns>rstk__icinvreconb_batchno__c</columns>
        <columns>rstk__icinvreconb_fritem__c</columns>
        <columns>rstk__icinvreconb_toitem__c</columns>
        <columns>rstk__icinvreconb_abc__c</columns>
        <columns>rstk__icinvreconb_iccomcod__c</columns>
        <columns>rstk__icinvreconb_resp__c</columns>
        <filterScope>Everything</filterScope>
        <label>Reconcile Batches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physical Inventory Reconciliation Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>